@@ -74,8 +74,9 @@ echo '<a href="'.conv_link_target("logo-competition").'">Logo Competition</a>.';
 ?>
 <hr>
 <center>
-<a href="<?php echo $rel_path;?>/birthday/index.php" class="nohilight"><img src="<?php echo $rel_path;?>/birthday/birthday_celebration1.gif" border="0" width="596" height="53"></a>
-<h3>On the 1st of June 2003 we are celebrating fvwm's tenth birthday.</h3>
+<a href="<?php echo $rel_path;?>/birthday/" class="nohilight"><img src="<?php echo $rel_path;?>/birthday/birthday_celebration1.gif" border="0" width="596" height="53"></a>
+<h3>On the 1st of June 2003 we are celebrating fvwm's tenth
+<a href="birthday/">birthday</a>.</h3>
 </center>
 <hr>
 
