@@ -1,3 +1,8 @@
+2003-06-01  Mikhael Goikhman  <migo@homemail.com>
+
+	* index.php:
+	add explicit link to the birthday page
+
 2003-05-31  Mikhael Goikhman  <migo@homemail.com>
 
 	* **.html:
